# ai-voice-agent

./: .env.example  .gitignore  Dockerfile  Makefile  PROJECT_SUMMARY.txt  PROPOSAL.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: agent_persona.yaml  routing_rules.yaml
scripts/: simulate_call.py  test_webhooks.py
src/: __init__.py  config.py  main.py
src/agent/: __init__.py  conversation.py  intent_router.py  knowledge_base.py
src/integrations/: airtable_sync.py  calendar.py  ghl_webhook.py
src/utils/: logger.py
src/voice/: __init__.py  retell_client.py  tts_engine.py  vapi_client.py
src/webhooks/: __init__.py  handlers.py
templates/: appointment_booking.txt  greeting.txt  qualification.txt
tests/: __init__.py  test_conversation.py  test_intent_router.py  test_webhooks.py
